Fix overflow in tag list

--- a/src/app/file-info-sheet/file-info-sheet.component.scss
+++ b/src/app/file-info-sheet/file-info-sheet.component.scss
@@ -89,6 +89,7 @@
 
   .tag-chip-text {
     white-space: wrap;
+    overflow-wrap: anywhere;
   }
 }
 
